# stoat

./: .gitignore  .lychee.toml  .markdownlint-cli2.yaml  .mergify.yml  .pr_agent.toml  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  codecov.yml  deny.toml  mise.toml  renovate.json5  rustfmt.toml  typos.toml
.cargo/: config.toml
.github/actions/resolve-rust-versions/: action.yml  resolve.sh
.github/actions/setup-nextest/: action.yml  setup.sh
.github/actions/setup-rust/: action.yml
.github/scripts/: alpine-test.sh  cargo-publish-workspace.sh  verify-static-linking.sh
.github/workflows/: ci.yml  reflow-coverage.yml  reflow-library.yml  reflow-mise.yml  reflow-pre-commit.yml  reflow-release-build.yml  reflow-release-version.yml  reflow-rust.yml
crates/stoat/: Cargo.toml
crates/stoat-core/: Cargo.toml
crates/stoat-core/src/: config.rs  lib.rs  oauth.rs  paths.rs  pkce.rs  token.rs  transform.rs
crates/stoat-io/: Cargo.toml
crates/stoat-io/src/: browser.rs  callback.rs  lib.rs  paste.rs  proxy.rs  token_exchange.rs  token_manager.rs  token_refresh.rs  token_store.rs
crates/stoat/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/project/: architecture.md  configuration.md  decisions.md  implementation.md  index.md  open-questions.md
