[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
repository = "https://github.com/altendky/stoat"
homepage = "https://github.com/altendky/stoat"
description = "Streaming OAuth Transformer — a config-driven local reverse proxy for OAuth token lifecycle management"
keywords = ["oauth", "proxy", "streaming", "transformer"]
categories = ["authentication", "network-programming"]

[workspace.dependencies]
# Internal crates
stoat-core = { path = "crates/stoat-core", version = "0.1.0" }
stoat-io = { path = "crates/stoat-io", version = "0.1.0" }

# External dependencies
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "6"
http = "1"
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
open = "5"
rand = "0.10"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
