[package]
name = "stoat-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Core logic for stoat (sans-IO) — config types, PKCE, request transformation"
keywords = ["oauth", "proxy", "sans-io"]
categories = ["authentication"]

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
