[package]
name = "stoat-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "I/O layer for stoat — HTTP proxy server, OAuth token exchange, browser launch"
keywords = ["oauth", "proxy", "streaming"]
categories = ["authentication", "network-programming"]

[dependencies]
stoat-core = { workspace = true }
axum = { workspace = true }
dirs = { workspace = true }
http = { workspace = true }
open = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
